# cookiecutter-napari-plugin

./: .cirrus.yml  .gitignore  LICENSE  PROMPTS.md  README.md  _tasks.py  cookiecutter.json  copier.yaml  copier.yml  mkdocs.yml  options.md  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: index.md
docs/contributor-guide/: quickstart.md
docs/user-guide/: publish-plugin.md  quickstart.md
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
napari-foobar/: LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
napari-foobar/docs/: index.md
napari-foobar/napari_foobar/: __init__.py
napari-foobar/napari_foobar/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
napari-{{cookiecutter.plugin_name}}/: .gitignore  .travis.yml  README.md  README.rst  appveyor.yml  napari_{{cookiecutter.module_name}}.py  requirements.txt  setup.py  tox.ini
napari-{{cookiecutter.plugin_name}}/.github/workflows/: test_and_deploy.yml
napari-{{cookiecutter.plugin_name}}/docs_sources/mkdocs/: index.md  mkdocs.yml
napari-{{cookiecutter.plugin_name}}/docs_sources/sphinx/: conf.py  index.rst
napari-{{cookiecutter.plugin_name}}/licenses/: BSD-3  LGPL-3
napari-{{cookiecutter.plugin_name}}/napari_{{cookiecutter.module_name}}/: {{cookiecutter.module_name}}.py
napari-{{cookiecutter.plugin_name}}/napari_{{cookiecutter.module_name}}/_tests/: test_{{cookiecutter.module_name}}.py
napari-{{cookiecutter.plugin_name}}/tests/: test_{{cookiecutter.module_name}}.py
template/: LICENSE.jinja  README.md.jinja  pyproject.toml.jinja  setup.cfg.jinja  tox.ini  {% if install_precommit %}.pre-commit-config.yaml{% endif %}.jinja
template/.github/: {% if install_dependabot %}dependabot.yml{% endif %}.jinja
template/.github/workflows/: test_and_deploy.jinja
template/licenses/: BSD-3.jinja
template/src/: LICENSE.jinja  README.md.jinja  pyproject.toml  tox.ini
template/src/{{module_name}}/: __init__.py.jinja  _writer.py.jinja  napari.yaml.jinja  {% if include_widget_plugin %}_widget.py{% endif %}.jinja  {% if include_writer_plugin %}_writer.py{% endif %}.jinja
template/src/{{module_name}}/_tests/: {% if include_reader_plugin %}test_reader.py{% endif %}.jinja  {% if include_sample_data_plugin %}test_sample_data.py{% endif %}.jinja  {% if include_widget_plugin %}test_widget.py{% endif %}.jinja  {% if include_writer_plugin %}test_writer.py{% endif %}.jinja
tests/: test_create_template.py
{{cookiecutter.package_name}}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
{{cookiecutter.package_name}}/.github/workflows/: test_and_deploy.yml
{{cookiecutter.package_name}}/licenses/: BSD-3
{{cookiecutter.package_name}}/tests/test_integration/: test_placeholder.py
{{cookiecutter.plugin_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.plugin_name}}/.github/: dependabot.yml
{{cookiecutter.plugin_name}}/.github/workflows/: test_and_deploy.yml
{{cookiecutter.plugin_name}}/.napari/: DESCRIPTION.md
{{cookiecutter.plugin_name}}/.napari-hub/: DESCRIPTION.md  config.yml
{{cookiecutter.plugin_name}}/docs_sources/mkdocs/: index.md  mkdocs.yml
{{cookiecutter.plugin_name}}/docs_sources/sphinx/: conf.py  index.rst
{{cookiecutter.plugin_name}}/licenses/: BSD-3  LGPL-3
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/: __init__.py  _dock_widget.py  _function.py  _reader.py  _sample_data.py  _widget.py  _writer.py  napari.yaml  napari.yml
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_widget.py
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/: __init__.py  _dock_widget.py  _function.py  _function_widget.py  _reader.py
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/_tests/: test_dock_widget.py  test_function.py  test_function_widget.py  test_reader.py  test_writer.py
{{plugin_name}}/: .pre-commit-config.yaml  LICENSE  tox.ini
{{plugin_name}}/licenses/: MIT
{{plugin_name}}/src/{{module_name}}/: __init__.py
{{plugin_name}}/src/{{module_name}}/_tests/: test_widget.py
