[metadata]
name = napari-foobar
version = 0.0.1
author = Napari Developer
author_email = yourname@example.com
url = https://github.com/githubuser/napari-foobar
license = BSD-3-Clause
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/githubuser/napari-foobar/issues
    Documentation = https://github.com/githubuser/napari-foobar#README.md
    Source Code = https://github.com/githubuser/napari-foobar
    User Support = https://github.com/githubuser/napari-foobar/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-foobar = napari_foobar
