[metadata]
name = {{cookiecutter.package_name}}
version = 0.0.1
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
{% if cookiecutter.github_repository_url != 'provide later' -%}
url = {{ cookiecutter.github_repository_url }}
{%- endif %}
{% if cookiecutter.license == "MIT" -%}
license = {{cookiecutter.license}}
{%- elif cookiecutter.license == "BSD-3" -%}
license = BSD-3-Clause
{%- elif cookiecutter.license == "GNU GPL v3.0" -%}
license = GPL-3.0-only
{%- elif cookiecutter.license == "GNU LGPL v3.0" -%}
license = LGPL-3.0-only
{%- elif cookiecutter.license == "Apache Software License 2.0" -%}
license = Apache-2.0
{%- elif cookiecutter.license == "Mozilla Public License 2.0" -%}
license = MPL-2.0
{%- endif %}
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    {% if cookiecutter.license == "MIT" -%}
    License :: OSI Approved :: MIT License
    {%- elif cookiecutter.license == "BSD-3" -%}
    License :: OSI Approved :: BSD License
    {%- elif cookiecutter.license == "GNU GPL v3.0" -%}
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    {%- elif cookiecutter.license == "GNU LGPL v3.0" -%}
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    {%- elif cookiecutter.license == "Apache Software License 2.0" -%}
    License :: OSI Approved :: Apache Software License
    {%- elif cookiecutter.license == "Mozilla Public License 2.0" -%}
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    {%- endif %}
{% if cookiecutter.github_repository_url != 'provide later' -%}
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.package_name}}/issues
    Documentation = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.package_name}}#README.md
    Source Code = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.package_name}}
    User Support = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.package_name}}/issues
{%- endif %}

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
	setuptools_scm

[options.packages.find]
where = {{cookiecutter.module_name}}
exclude = test*

[options.extras_require]
dev =
	black
	pytest
	pytest-cov
	bump2version
	pre-commit
	flake8
	coverage

[flake8]
max-line-length = 79
exclude = __init__.py,build,.eggs

[tool:pytest]
addopts = --cov={{cookiecutter.package_name}}