[metadata]
name = {{cookiecutter.plugin_name}}
{% if cookiecutter.use_git_tags_for_versioning != 'y' -%}
version = 0.0.1
{%- endif %}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
license = {{cookiecutter.license}}
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.plugin_name}}
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    {% if cookiecutter.license == "MIT" -%}
    License :: OSI Approved :: MIT License
    {%- elif cookiecutter.license == "BSD-3" -%}
    License :: OSI Approved :: BSD License
    {%- elif cookiecutter.license == "GNU GPL v3.0" -%}
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    {%- elif cookiecutter.license == "Apache Software License 2.0" -%}
    License :: OSI Approved :: Apache Software License
    {%- elif cookiecutter.license == "Mozilla Public License 2.0" -%}
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    {%- endif %}
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.plugin_name}}/issues
    Documentation = 'https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.plugin_name}}#README.md'
    Source Code = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.plugin_name}}
    User Support = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.plugin_name}}/issues

[options]
packages = find:
python_requires = >=3.7
{% if cookiecutter.use_git_tags_for_versioning == 'y' -%}
setup_requires = setuptools_scm
{%- endif %}
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    {{cookiecutter.plugin_name}} = {{cookiecutter.module_name}}
