[metadata]
name = {{cookiecutter.plugin_name}}
{% if cookiecutter.use_git_tags_for_versioning != 'y' -%}
version = 0.0.1
{%- endif %}
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
{% if cookiecutter.github_repository_url != 'provide later' -%}
url = {{ cookiecutter.github_repository_url }}
{%- endif %}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
{% if cookiecutter.license == "MIT" -%}
license = {{cookiecutter.license}}
{%- elif cookiecutter.license == "BSD-3" -%}
license = BSD-3-Clause
{%- elif cookiecutter.license == "GNU GPL v3.0" -%}
license = GPL-3.0-only
{%- elif cookiecutter.license == "GNU LGPL v3.0" -%}
license = LGPL-3.0-only
{%- elif cookiecutter.license == "Apache Software License 2.0" -%}
license = Apache-2.0
{%- elif cookiecutter.license == "Mozilla Public License 2.0" -%}
license = MPL-2.0
{%- endif %}
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    {% if cookiecutter.license == "MIT" -%}
    License :: OSI Approved :: MIT License
    {%- elif cookiecutter.license == "BSD-3" -%}
    License :: OSI Approved :: BSD License
    {%- elif cookiecutter.license == "GNU GPL v3.0" -%}
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    {%- elif cookiecutter.license == "GNU LGPL v3.0" -%}
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    {%- elif cookiecutter.license == "Apache Software License 2.0" -%}
    License :: OSI Approved :: Apache Software License
    {%- elif cookiecutter.license == "Mozilla Public License 2.0" -%}
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    {%- endif %}
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
{% if cookiecutter.github_repository_url != 'provide later' -%}
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}/issues
    Documentation = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}#README.md
    Source Code = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}
    User Support = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}/issues
{%- endif %}

[options]
packages = find:
install_requires =
    numpy
{% if cookiecutter.include_widget_plugin == 'y' %}    magicgui
    qtpy
{% endif %}
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
{% if cookiecutter.use_git_tags_for_versioning == 'y' -%}
setup_requires = setuptools_scm
{%- endif %}
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    {{cookiecutter.plugin_name}} = {{cookiecutter.module_name}}:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
{% if cookiecutter.include_widget_plugin == 'y' %}    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
{% endif %}

[options.package_data]
* = *.yaml
